@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "20130720.000012"
+#define TAGSISTANT_BUILDNUMBER "20130720.000023"
